fix : align z-index

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
     }
 
     .modal-background {
-        @apply width-flex-layout absolute z-[5] h-full bg-black bg-opacity-50;
+        @apply width-flex-layout absolute z-[15] h-full bg-black bg-opacity-50;
     }
 
     .modal-background__hidden {
@@ -33,11 +33,11 @@
     }
 
     .bottom-modal-board__opened {
-        @apply width-flex-layout fixed bottom-0 z-10 h-4/5 w-full overflow-y-scroll rounded-t-3xl bg-white opacity-100 duration-300 ease-in-out px-3;
+        @apply width-flex-layout fixed bottom-0 z-20 h-4/5 w-full overflow-y-scroll rounded-t-3xl bg-white opacity-100 duration-300 ease-in-out;
     }
 
     .bottom-modal-board__closed {
-        @apply width-flex-layout fixed bottom-0 z-10 h-4/5 w-full translate-y-full overflow-y-scroll rounded-t-3xl bg-white opacity-100 duration-300 ease-in-out px-3;
+        @apply width-flex-layout fixed bottom-0 z-20 h-4/5 w-full translate-y-full overflow-y-scroll rounded-t-3xl bg-white opacity-100 duration-300 ease-in-out px-3;
     }
 
     .modal-board__opened {
